--- a/web/tournament.html
+++ b/web/tournament.html
@@ -51,7 +51,15 @@ foreach ($results as $result) {
 EOF;
    }
 
-   $team = getTeamName(array($result['name1'], $result['name2']));
+   $teamMembers = array();
+   if ($result['player1'] != 0) {
+     array_push($teamMembers, "<a href='./player.html?id=" . $result['player1'] . "'>" . $result['name1'] . "</a>");
+   }
+   if ($result['player2'] != 0) {
+     array_push($teamMembers, "<a href='./player.html?id=" . $result['player2'] . "'>" . $result['name2'] . "</a>");
+   }
+   $team = implode(' / ', $teamMembers);
+
    $resultHtml .= "<li><div class='dataCell'>" . $result['place'] . "</div><div class='dataCell'>" . $team . "</div></li>\n";
 }
 $resultHtml .= "</ul>";
