--- a/web/player.html
+++ b/web/player.html
@@ -29,11 +29,10 @@ echo <<< EOF
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 <link rel="stylesheet" href="/css/common.css">
-<link rel="stylesheet" href="/css/ddc.css">
+<link rel="stylesheet" href="/css/ddc/common.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="/js/common.js"></script>
-<script src="/js/ddc/common.js"></script>
 <script src="/js/ddc/player.js"></script>
 <script>
 function launch() {
