Rankings form; remove attendance factor from ranking formula; etc

--- a/web/admin/results.html
+++ b/web/admin/results.html
@@ -1,14 +1,13 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-<link rel="stylesheet" href="../../../css/common.css">
-<link rel="stylesheet" href="../../../css/ddc/common.css">
-<link rel="stylesheet" href="../../../css/ddc/results.css">
+<link rel="stylesheet" href="/css/common.css">
+<link rel="stylesheet" href="/css/ddc/common.css">
+<link rel="stylesheet" href="/css/ddc/results.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-<script src="../../../js/common.js"></script>
-<script src="../../../js/ddc/ddc.js"></script>
-<script src="../../../js/ddc/results.js"></script>
+<script src="/js/common.js"></script>
+<script src="/js/ddc/results.js"></script>
 <script>
 function launch() {
     initializeResults();
