Fix handling of Top X rankings

--- a/web/champs.html
+++ b/web/champs.html
@@ -59,6 +59,7 @@ mail to <a href="mailto:conrad_damon@yahoo.com">conrad_damon@yahoo.com</a>.
 <tr><td>2015</td><td>WFDF</td><td>Norrkoping, Sweden</td><td>Conrad Damon / Dave Hesselberth</td><td>Beth Verish / Juliana Korver</td><td></td><td>Jeff Korns / Tobias Cole</td></tr>
 <tr><td>2016</td><td>US Open</td><td>Santa Cruz, CA</td><td>Conrad Damon / Dave Hesselberth</td><td>Diana Elsner / Lori Daniels</td><td></td><td>Randy Lahm Jr / Ethan Lahm</td></tr>
 <tr><td>2017</td><td>WFDF</td><td>Basingstoke, England</td><td>Conrad Damon / Harvey Brandt</td><td>Juliana Korver / Beth Verish</td><td></td><td>Jonathan Dybbroe / Simon Hesselgren</td></tr>
+<tr><td>2018</td><td>US Open</td><td>Tallahassee, Florida</td><td>Conrad Damon</td><td>Diane Elsner</td><td></td><td></td></tr>
 
 </table>
 </body> </html>
