Add latest tournament and number of tournaments played to export

--- a/web/champs.html
+++ b/web/champs.html
@@ -18,48 +18,49 @@ mail to <a href="mailto:conrad_damon@yahoo.com">conrad_damon@yahoo.com</a>.
 <table>
 <tr><th align=left>Year<th align=left>Tournament<th align=left>Where<th align=left>Open<th align=left>Women<th align=left>Mixed<th align=left>Junior</td></tr>
 
-<tr><td>1978</td><td>WFC</td><td>Pasadena, CA</td><td>Al Bonopane / Charlie Duvall</td><td>Laura Engel / Alan Fridge</td></tr>
-<tr><td>1979</td><td>WFC</td><td>Pasadena, CA</td><td>Gerry Geare / Steve McLean</td><td>Teresa Gaman / Cyndi Birch</td></tr>
-<tr><td>1980</td><td>WFC</td><td>Pasadena, CA</td><td>Gerry Geare / Mark Horn</td><td>Anne Campagna / Marie Bracciale</td></tr>
-<tr><td>1981</td><td>WFC</td><td>Pasadena, CA</td><td>Jon Cohn / Paul Brenner</td><td>Gee Kirkland / Cyndi Birch</td></tr>
-<tr><td>1982</td><td>WFC</td><td>East Brunswick, NJ</td><td>Snapper Pierson / Sean Sheldon</td><td>Judy Horowitz / Joann Loftus</td></tr>
-<tr><td>1983</td><td>Santa Cruz</td><td>Santa Cruz, CA</td><td>Snapper Pierson / Sean Sheldon</td><td>Chieko Kakimoto / Hasko Kiya</td></tr>
-<tr><td>1984</td><td>Santa Cruz</td><td>Santa Cruz, CA</td><td>Sean Sheldon / Jerry Garrett</td><td>Tami Pellicane / Chieko Kakimoto</td></tr>
-<tr><td>1984</td><td>US Open</td><td>La Mirada, CA</td><td>Mark Horn / Scott Zimmermann</td><td>Diane Marguiles / Anni Kreml</td></tr>
-<tr><td>1985</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Diane Marguiles / Anni Kreml</td></tr>
-<tr><td>1986</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Anni Kreml / Diane Marguiles</td></tr>
-<tr><td>1987</td><td>WFDF</td><td>Ft Collins, CO</td><td>Snapper Pierson / Ron Vingerelli</td><td>Liz Herrick / Amanda Carreiro</td></tr>
-<tr><td>1987</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Barbro Langjuth / Britt-Marie Renstrom</td></tr>
-<tr><td>1988</td><td>WFDF</td><td>San Francisco, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Liz Herrick / Amanda Carreiro</td></tr>
-<tr><td>1988</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Liz Herrick / Amanda Carreiro</td></tr>
-<tr><td>1989</td><td>WFDF</td><td>Essex, England</td><td>Stefan Andersson / Sten Hermodsson</td><td>Barbro Langjuth / Britt-Marie Renstrom</td><td></td><td>Burvall / Nilsson</td></tr>
-<tr><td>1989</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Amanda Carreiro / Liz Herrick</td></tr>
-<tr><td>1990</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Amanda Carreiro / Liz Herrick</td></tr>
-<tr><td>1991</td><td>WFDF</td><td>Santa Cruz, CA</td><td>Tony Pellicane / Jim Schmal</td><td>Amy Bekken / Bethany Porter</td></tr>
-<tr><td>1992</td><td>US Open</td><td>Ft Collins, CO</td><td>Snapper Pierson / Rick LeBeau</td><td>Anni Kreml / Diane Harris</td></tr>
-<tr><td>1993</td><td>WFDF</td><td>San Diego, CA</td><td>Snapper Pierson / Rick LeBeau</td><td>Anni Kreml / Diane Harris</td></tr>
-<tr><td>1994</td><td>US Open</td><td>Ft Collins, CO</td><td>Harvey Brandt / Robbie Robison</td><td>Amy Bekken / Bethany Porter</td></tr>
-<tr><td>1996</td><td>US Open</td><td>Ft Collins, CO</td><td>Snapper Pierson / Mark Horn</td><td>Anni Kreml / Diane Harris</td></tr>
-<tr><td>1997</td><td>WFDF</td><td>Helsinki, Finland</td><td>Sune Wentzel / Aksel Finborud</td><td>Regina Olnils  /  Linda Johansson</td></tr>
-<tr><td>1998</td><td>US Open</td><td>Dallas, TX</td><td>Snapper Pierson / Rick LeBeau</td><td>Judy Robbins</td></tr>
-<tr><td>1999</td><td>WFDF</td><td>Kalmar, Sweden</td><td>Conrad Damon / Harvey Brandt</td><td>Amy Bekken/Judy Robbins</td></tr>
-<tr><td>2001</td><td>WFDF</td><td>San Diego, CA</td><td>John Greensage / John Kirkland</td><td>G Kirkland/Judy Robbins</td><td></td><td>Vehro Titcomb</td></tr>
-<tr><td>2003</td><td>WFDF</td><td>Santa Cruz, CA</td><td>John Greensage / John Kirkland</td><td>Amanda Carreiro / Lori Daniels</td></tr>
-<tr><td>2004</td><td>WFDF DDC</td><td>Phoenix, AZ</td><td>Conrad Damon / Rick LeBeau</td><td>Tita Ugalde / Beth Verish</td><td>John Kirkland / G Kirkland</td></tr>
-<tr><td>2005</td><td>WFDF</td><td>San Diego, CA</td><td>Conrad Damon / Tony Pellicane</td><td>Lori Daniels / Bethany Sanchez</td><td>Conrad Damon / Amanda Carreiro</td><td>Cody Kirkland / Eddy Cohn</td></tr>
-<tr><td>2006</td><td>WFDF DDC</td><td>Phoenix, AZ</td><td>Conrad Damon / Tony Pellicane</td><td>Tita Ugalde / Beth Verish</td><td>Harvey Brandt / Lori Daniels</td></tr>
-<tr><td>2007</td><td>WFDF</td><td>Ithaca, NY</td><td>Conrad Damon / Harvey Brandt</td><td>Tita Ugalde / Beth Verish</td><td>Tita Ugalde / Conrad Damon</td></td></tr>
-<tr><td>2008</td><td>WFDF DDC</td><td>Phoenix, AZ</td><td>Conrad Damon / John Greensage</td><td>Amanda Carreiro / Kristine Spekkens</td><td>Conrad Damon / Lori Daniels</td></tr>
-<tr><td>2009</td><td>WFDF</td><td>Jacksonville, FL</td><td>Rick LeBeau / Harvey Brandt</td><td>Tita Ugalde / Lori Daniels</td><td>Beth Verish / Harvey Brandt</td></tr>
-<tr><td>2010</td><td>WFDF DDC</td><td>Phoenix, AZ</td><td>Cody Kirkland / John Kirkland</td><td>Stephanie Chan / Lori Daniels</td><td>Beth Verish / Ron Vingerelli</td></tr>
-<tr><td>2011</td><td>WFDF</td><td>Fort Collins, CO</td><td>Conrad Damon / Rick LeBeau</td><td>Beth Verish / Lori Daniels</td><td></td></tr>
-<tr><td>2012</td><td>US Open</td><td>Santa Barbara, CA</td><td>Conrad Damon / Cody Kirkland</td><td>Beth Verish / Stephanie Chan</td><td></td></tr>
-<tr><td>2013</td><td>WFDF</td><td>Norrkoping, Sweden</td><td>Dave Hesselberth / Harvey Brandt</td><td>Beth Verish / Tita Ugalde</td><td></td></tr>
-<tr><td>2014</td><td>US Open</td><td>Fredericksburg, VA</td><td>Conrad Damon / Dave Hesselberth</td><td>Stina Burvall / Regina Olnils</td><td></td></tr>
-<tr><td>2015</td><td>WFDF</td><td>Norrkoping, Sweden</td><td>Conrad Damon / Dave Hesselberth</td><td>Beth Verish / Juliana Korver</td><td></td><td>Jeff Korns / Tobias Cole</td></tr>
-<tr><td>2016</td><td>US Open</td><td>Santa Cruz, CA</td><td>Conrad Damon / Dave Hesselberth</td><td>Diana Elsner / Lori Daniels</td><td></td><td>Randy Lahm Jr / Ethan Lahm</td></tr>
-<tr><td>2017</td><td>WFDF</td><td>Basingstoke, England</td><td>Conrad Damon / Harvey Brandt</td><td>Juliana Korver / Beth Verish</td><td></td><td>Jonathan Dybbroe / Simon Hesselgren</td></tr>
+<tr><td>2019</td><td>WFDF</td><td>Richmond, Virginia</td><td>Conrad Damon / Jonathan Brandtberg</td><td>Beth Verish / Juliana Korver</td><td></td><td>Jonathan Dybbroe / Simon Hesselgren</td></tr>
 <tr><td>2018</td><td>US Open</td><td>Tallahassee, Florida</td><td>Conrad Damon</td><td>Diane Elsner</td><td></td><td></td></tr>
+<tr><td>2017</td><td>WFDF</td><td>Basingstoke, England</td><td>Conrad Damon / Harvey Brandt</td><td>Juliana Korver / Beth Verish</td><td></td><td></td></tr>
+<tr><td>2016</td><td>US Open</td><td>Santa Cruz, CA</td><td>Conrad Damon / Dave Hesselberth</td><td>Diana Elsner / Lori Daniels</td><td></td><td>Randy Lahm Jr / Ethan Lahm</td></tr>
+<tr><td>2015</td><td>WFDF</td><td>Norrkoping, Sweden</td><td>Conrad Damon / Dave Hesselberth</td><td>Beth Verish / Juliana Korver</td><td></td><td>Jeff Korns / Tobias Cole</td></tr>
+<tr><td>2014</td><td>US Open</td><td>Fredericksburg, VA</td><td>Conrad Damon / Dave Hesselberth</td><td>Stina Burvall / Regina Olnils</td><td></td></tr>
+<tr><td>2013</td><td>WFDF</td><td>Norrkoping, Sweden</td><td>Dave Hesselberth / Harvey Brandt</td><td>Beth Verish / Tita Ugalde</td><td></td></tr>
+<tr><td>2012</td><td>US Open</td><td>Santa Barbara, CA</td><td>Conrad Damon / Cody Kirkland</td><td>Beth Verish / Stephanie Chan</td><td></td></tr>
+<tr><td>2011</td><td>WFDF</td><td>Fort Collins, CO</td><td>Conrad Damon / Rick LeBeau</td><td>Beth Verish / Lori Daniels</td><td></td></tr>
+<tr><td>2010</td><td>WFDF DDC</td><td>Phoenix, AZ</td><td>Cody Kirkland / John Kirkland</td><td>Stephanie Chan / Lori Daniels</td><td>Beth Verish / Ron Vingerelli</td></tr>
+<tr><td>2009</td><td>WFDF</td><td>Jacksonville, FL</td><td>Rick LeBeau / Harvey Brandt</td><td>Tita Ugalde / Lori Daniels</td><td>Beth Verish / Harvey Brandt</td></tr>
+<tr><td>2008</td><td>WFDF DDC</td><td>Phoenix, AZ</td><td>Conrad Damon / John Greensage</td><td>Amanda Carreiro / Kristine Spekkens</td><td>Conrad Damon / Lori Daniels</td></tr>
+<tr><td>2007</td><td>WFDF</td><td>Ithaca, NY</td><td>Conrad Damon / Harvey Brandt</td><td>Tita Ugalde / Beth Verish</td><td>Tita Ugalde / Conrad Damon</td></td></tr>
+<tr><td>2006</td><td>WFDF DDC</td><td>Phoenix, AZ</td><td>Conrad Damon / Tony Pellicane</td><td>Tita Ugalde / Beth Verish</td><td>Harvey Brandt / Lori Daniels</td></tr>
+<tr><td>2005</td><td>WFDF</td><td>San Diego, CA</td><td>Conrad Damon / Tony Pellicane</td><td>Lori Daniels / Bethany Sanchez</td><td>Conrad Damon / Amanda Carreiro</td><td>Cody Kirkland / Eddy Cohn</td></tr>
+<tr><td>2004</td><td>WFDF DDC</td><td>Phoenix, AZ</td><td>Conrad Damon / Rick LeBeau</td><td>Tita Ugalde / Beth Verish</td><td>John Kirkland / G Kirkland</td></tr>
+<tr><td>2003</td><td>WFDF</td><td>Santa Cruz, CA</td><td>John Greensage / John Kirkland</td><td>Amanda Carreiro / Lori Daniels</td></tr>
+<tr><td>2001</td><td>WFDF</td><td>San Diego, CA</td><td>John Greensage / John Kirkland</td><td>G Kirkland/Judy Robbins</td><td></td><td>Vehro Titcomb</td></tr>
+<tr><td>1999</td><td>WFDF</td><td>Kalmar, Sweden</td><td>Conrad Damon / Harvey Brandt</td><td>Amy Bekken/Judy Robbins</td></tr>
+<tr><td>1998</td><td>US Open</td><td>Dallas, TX</td><td>Snapper Pierson / Rick LeBeau</td><td>Judy Robbins</td></tr>
+<tr><td>1997</td><td>WFDF</td><td>Helsinki, Finland</td><td>Sune Wentzel / Aksel Finborud</td><td>Regina Olnils  /  Linda Johansson</td></tr>
+<tr><td>1996</td><td>US Open</td><td>Ft Collins, CO</td><td>Snapper Pierson / Mark Horn</td><td>Anni Kreml / Diane Harris</td></tr>
+<tr><td>1994</td><td>US Open</td><td>Ft Collins, CO</td><td>Harvey Brandt / Robbie Robison</td><td>Amy Bekken / Bethany Porter</td></tr>
+<tr><td>1993</td><td>WFDF</td><td>San Diego, CA</td><td>Snapper Pierson / Rick LeBeau</td><td>Anni Kreml / Diane Harris</td></tr>
+<tr><td>1992</td><td>US Open</td><td>Ft Collins, CO</td><td>Snapper Pierson / Rick LeBeau</td><td>Anni Kreml / Diane Harris</td></tr>
+<tr><td>1991</td><td>WFDF</td><td>Santa Cruz, CA</td><td>Tony Pellicane / Jim Schmal</td><td>Amy Bekken / Bethany Porter</td></tr>
+<tr><td>1990</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Amanda Carreiro / Liz Herrick</td></tr>
+<tr><td>1989</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Amanda Carreiro / Liz Herrick</td></tr>
+<tr><td>1989</td><td>WFDF</td><td>Essex, England</td><td>Stefan Andersson / Sten Hermodsson</td><td>Barbro Langjuth / Britt-Marie Renstrom</td><td></td><td>Burvall / Nilsson</td></tr>
+<tr><td>1988</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Liz Herrick / Amanda Carreiro</td></tr>
+<tr><td>1988</td><td>WFDF</td><td>San Francisco, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Liz Herrick / Amanda Carreiro</td></tr>
+<tr><td>1987</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Barbro Langjuth / Britt-Marie Renstrom</td></tr>
+<tr><td>1987</td><td>WFDF</td><td>Ft Collins, CO</td><td>Snapper Pierson / Ron Vingerelli</td><td>Liz Herrick / Amanda Carreiro</td></tr>
+<tr><td>1986</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Anni Kreml / Diane Marguiles</td></tr>
+<tr><td>1985</td><td>US Open</td><td>La Mirada, CA</td><td>Snapper Pierson / Ron Vingerelli</td><td>Diane Marguiles / Anni Kreml</td></tr>
+<tr><td>1984</td><td>US Open</td><td>La Mirada, CA</td><td>Mark Horn / Scott Zimmermann</td><td>Diane Marguiles / Anni Kreml</td></tr>
+<tr><td>1984</td><td>Santa Cruz</td><td>Santa Cruz, CA</td><td>Sean Sheldon / Jerry Garrett</td><td>Tami Pellicane / Chieko Kakimoto</td></tr>
+<tr><td>1983</td><td>Santa Cruz</td><td>Santa Cruz, CA</td><td>Snapper Pierson / Sean Sheldon</td><td>Chieko Kakimoto / Hasko Kiya</td></tr>
+<tr><td>1982</td><td>WFC</td><td>East Brunswick, NJ</td><td>Snapper Pierson / Sean Sheldon</td><td>Judy Horowitz / Joann Loftus</td></tr>
+<tr><td>1981</td><td>WFC</td><td>Pasadena, CA</td><td>Jon Cohn / Paul Brenner</td><td>Gee Kirkland / Cyndi Birch</td></tr>
+<tr><td>1980</td><td>WFC</td><td>Pasadena, CA</td><td>Gerry Geare / Mark Horn</td><td>Anne Campagna / Marie Bracciale</td></tr>
+<tr><td>1979</td><td>WFC</td><td>Pasadena, CA</td><td>Gerry Geare / Steve McLean</td><td>Teresa Gaman / Cyndi Birch</td></tr>
+<tr><td>1978</td><td>WFC</td><td>Pasadena, CA</td><td>Al Bonopane / Charlie Duvall</td><td>Laura Engel / Alan Fridge</td></tr>
 
 </table>
 </body> </html>
